// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionSelectionPane calls \`cancelOptionSelection\` when cancelled 1`] = `
[
  "id",
]
`;

exports[`OptionSelectionPane calls \`selectOption\` when selected 1`] = `
[
  "id",
  "option_selection_pane",
  "selected",
]
`;
